@@ -1,0 +1,53 @@
+{
+  "version": 4,
+  "terraform_version": "1.5.1",
+  "serial": 1,
+  "lineage": "6ff29e89-5410-3b6d-9418-9e93724cda79",
+  "outputs": {},
+  "resources": [
+    {
+      "mode": "managed",
+      "type": "aws_acm_certificate",
+      "name": "steven-challenge-cert",
+      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
+      "instances": [
+        {
+          "schema_version": 0,
+          "attributes": {
+            "arn": "arn:aws:acm:us-east-1:950224154531:certificate/f058a6a1-e215-42bb-b5f4-104c9dd207b3",
+            "certificate_authority_arn": "",
+            "certificate_body": "-----BEGIN CERTIFICATE-----\nMIIF6zCCA9OgAwIBAgIUOHo5QevP+WQ7jPdJBMhfKIZqbb0wDQYJKoZIhvcNAQEL\nBQAwgYQxCzAJBgNVBAYTAlhYMRIwEAYDVQQIDAlTdGF0ZU5hbWUxETAPBgNVBAcM\nCENpdHlOYW1lMRIwEAYDVQQKDAlNdWx0aXBsYW4xDzANBgNVBAsMBkRldk9wczEp\nMCcGA1UEAwwgc3RldmVuX2NoYWxsZW5nZS5jaGFsbGVuZ2UubG9jYWwwHhcNMjMw\nNjI4MDkxMDAwWhcNMzMwNjI1MDkxMDAwWjCBhDELMAkGA1UEBhMCWFgxEjAQBgNV\nBAgMCVN0YXRlTmFtZTERMA8GA1UEBwwIQ2l0eU5hbWUxEjAQBgNVBAoMCU11bHRp\ncGxhbjEPMA0GA1UECwwGRGV2T3BzMSkwJwYDVQQDDCBzdGV2ZW5fY2hhbGxlbmdl\nLmNoYWxsZW5nZS5sb2NhbDCCAiIwDQYJKoZIhvcNAQEBBQADggIPADCCAgoCggIB\nAO5MpYhQiE3eLTVPIPHKpnlnwNE2y/Li45YxSWTQ3w5Ck3hll1T0WVtjFwkgsXLL\nL/KWr4OiYrwMnXdB5WoR/d5UOTJQL7IyzUiZwalZiE+76Xzfmvp1KNwZLaELJ9WB\nzlxgU0G/bVNSYUryWA4iLWgzhnXtLVSk8Q9pyFeHJWrj2pmPu2/QiSIlltVo9jAe\n0XtjYMWaFIWwfxuZwN0FpWbGtEaJOOICf5NxY/3DYidF/byigm45/YnRffTfPPOz\n/mJW9ByovburW0k8g8khFMvYlZGa2Z0dOmbYwV6Eac8XPgMBS14qUvl4nhgo4Ek6\nGsoj+ZjaYxz02+5y+o7VPcYxvnLFDfgHxV7QohdUFB1xC8XHsS5Wd+8kx40QH05R\ng0IR13O8lUtXhA8NKm2wIqX7akyobzPEEeFZCRpuRyaOeD8dNo9Hd40KD/KhNldm\nH/w5RlIDdID8pzY9hmRjZKbd3PystZzsyZZdJTQGHW3l34xFTUO/ykmDMc+eWhfP\nVXCi8q7N9dBvPoBiUqtXhJPxrcCI0bmg2jks0XlUoOtO8HTZyP75KKFpbbAn7vHN\neR2JftSoOcthoK9zPxhFDtFolKdNClLvRUG3EfZBcKuS4krEMGuwT7yAq22u5S0k\nunkakJEW2g0m4cDZJ6njGp/VdlZ1w3G6k7b2+FmjaPLJAgMBAAGjUzBRMB0GA1Ud\nDgQWBBRTFD/dh5l+2bmGU/QZ2yFvPR9PajAfBgNVHSMEGDAWgBRTFD/dh5l+2bmG\nU/QZ2yFvPR9PajAPBgNVHRMBAf8EBTADAQH/MA0GCSqGSIb3DQEBCwUAA4ICAQAH\nEKY5xi9wtRED3VqeLGi2nVcCws95oH9pzk1JUnXBfnt0wK1RPbQ+EGA/WjEVO4dp\niN5LQzYlnCl1VnW5yizFtNiQLvub9LzFap5BPo/goF3gTNSfOBFy5OafkrRBAQHW\neZTz5Qq+Sz2oIlfcKebs8swWg4UN6whR+EPefjaDwTC1qqBdabFD7eiNmpeeUbvC\n7yI+El90T97XqMHtARNDnT3jSf2C602+kSrWkyliyZ6tZ9IQ1kGZUPZOnTan49L7\nPOcNnnorpPK4q7WbhfdOfYFkUaG2Uq7x+63+GByQ0UNDX9b2yXLvGGaejMFdkGQp\ni6M4l0C0MXQaJeMBTSPq5uAm8q+0rdKTdrsEQ0rOgDZL9/8ccUctk+LTVyU+EM/F\nF721tz7xp7NLwB9FgtF0fzKQhYILuhxsHFBWbUJ2N3H08nfSK7YYVbB9l65arjl5\nMd2mQ7OQNiarF1bAeAH5D3I6tAbf8LB6sF27YFQKHqmPOkPsURhSUe9j48KKfvQm\nR+P5QHgBFhOo5ipVejKEB92jq+bH6eei1ZoADrlewp8Q2S+VhvsNF8YpupPfgbjw\nW8pO0p3SbzyGHoeG/bSMviYpfHn8Jp9faogHOq7lMoIGNRvLeJFatz9kfpHbuURd\nRdpX1jrt9drnqrUwx2rOOuO2Fp2hHNZFHxSBfVe6xg==\n-----END CERTIFICATE-----\n",
+            "certificate_chain": null,
+            "domain_name": "",
+            "domain_validation_options": [],
+            "early_renewal_duration": "",
+            "id": "arn:aws:acm:us-east-1:950224154531:certificate/f058a6a1-e215-42bb-b5f4-104c9dd207b3",
+            "key_algorithm": "RSA_4096",
+            "not_after": "2033-06-25T09:10:00Z",
+            "not_before": "2023-06-28T09:10:00Z",
+            "options": [
+              {
+                "certificate_transparency_logging_preference": "DISABLED"
+              }
+            ],
+            "pending_renewal": false,
+            "private_key": "-----BEGIN PRIVATE KEY-----\nMIIJQgIBADANBgkqhkiG9w0BAQEFAASCCSwwggkoAgEAAoICAQDuTKWIUIhN3i01\nTyDxyqZ5Z8DRNsvy4uOWMUlk0N8OQpN4ZZdU9FlbYxcJILFyyy/ylq+DomK8DJ13\nQeVqEf3eVDkyUC+yMs1ImcGpWYhPu+l835r6dSjcGS2hCyfVgc5cYFNBv21TUmFK\n8lgOIi1oM4Z17S1UpPEPachXhyVq49qZj7tv0IkiJZbVaPYwHtF7Y2DFmhSFsH8b\nmcDdBaVmxrRGiTjiAn+TcWP9w2InRf28ooJuOf2J0X303zzzs/5iVvQcqL27q1tJ\nPIPJIRTL2JWRmtmdHTpm2MFehGnPFz4DAUteKlL5eJ4YKOBJOhrKI/mY2mMc9Nvu\ncvqO1T3GMb5yxQ34B8Ve0KIXVBQdcQvFx7EuVnfvJMeNEB9OUYNCEddzvJVLV4QP\nDSptsCKl+2pMqG8zxBHhWQkabkcmjng/HTaPR3eNCg/yoTZXZh/8OUZSA3SA/Kc2\nPYZkY2Sm3dz8rLWc7MmWXSU0Bh1t5d+MRU1Dv8pJgzHPnloXz1VwovKuzfXQbz6A\nYlKrV4ST8a3AiNG5oNo5LNF5VKDrTvB02cj++SihaW2wJ+7xzXkdiX7UqDnLYaCv\ncz8YRQ7RaJSnTQpS70VBtxH2QXCrkuJKxDBrsE+8gKttruUtJLp5GpCRFtoNJuHA\n2Sep4xqf1XZWdcNxupO29vhZo2jyyQIDAQABAoICADYFTJo+DWQ/m1aEKWb+xmXr\nwg97gVj+m9Kyuh1fZ01zhLxMpXWGDhK0QCba0TdBfg1boQ6xe3n/TxwXpWL6EKe7\nxpqUCHf4YcaVSoxyRj8zDV94Tkj8Ucaxc4FYRs+1JTuWP5F+TJGQsYscrJ8JmusO\nESt/GKFhYd9ZXugOtEoKvMXGilpy9v91b3/SE0s91UXINcod34yeAfaXEJxaORB3\nN6ts1KcRo2ugjycaCZB3IqoGWhSUU1hQlCH0kHv7oA2Zgi3UB+z5D9DmpcZs2CrM\n3r07Eh12oIRrm0xqrpTagz2Jp9UBOb2hnQ9DhvK6uBN+e8jtqv3HuWrRCGFkUGQD\nZvdrCyFEL+4wV0fto9oUHny11ZhMps/pqj3dFIJK1eEW1p7MwRZyaGSBTbS0vX1m\ndbuBv0sKDQ76uhNymzUVo4N7dXfdGpe1MEYh67J2H98u0Mdm09gJptAnrnj8A69V\nzYZT9rmxRxbeLSzcUVAVMOGaUaEVnmtHqeCVAr+c2nFtYrlFl4rwSZ1NjeIgtu2O\neVcUPet5SzrOpxST5y+GL8k2Bn5BEvM8bQiXbwnKA0iJH+S7zNIaj83eO/7M3dlK\nm79EBnjOd/sYfqFcWgwaoSI/Hkw9YOCs7tKFaEc5X0s0rYUdK+sFHJ9H8wWd41ql\ne+pxds90bCLnXrsJAyyNAoIBAQDypnB5edJ7szD1czdN5rBnmQbocyAk588EVMpU\nqExwrNhGfL3HImQIKjesMVSY5Y82igVrs5vuHfak2Dx8JhcXFHNcjufTlC57AFEw\nXplCOknIMYRR9jgt3KLfNYuMOxlcrg2tD8tGyiPFyXBi4qRsB6t2fBIHUVJyzM/d\nBo4b/7245aP3M76VhLjMxjtApYghF35xC0UtTobfHR1C/uaXY05T8rPiD+IIulxC\nPb5+HE+RSQ6WUDftYLDNHnp7axbNrI4CMDkmzPW8WHZk+woorQO69YX94Hu5h7FM\nEZHZNrwtRCbugym7x/LmscBcA9Xa6eHdRyALjWoBF785NheNAoIBAQD7aO4NfDLT\ns77bSF9nK+bI3U1Xxza0S1vfQojHM5elaafGj3mG1/LDtjyVQNTY8cKd7mVBHx/U\n4f3TW1581Edy7xHLLOf+zGYqdynIp+/NvncA8gbyUTbSoLluqoHBDCRCxRsTiBnb\nF0wk0Cowesf8QifBBhzsK6IS66Xxk6CXKAxswGHYyk5EHnXJ+Kwy42amoFrReeSR\nIwYP7rn4gVYbSN+em5YF+m2eIj/GqkYhQ3B6lS1EzLGddcUw1R8X2GBPVqOniNzZ\npheLkhkzwAo/IVjvWRa76f6TER5LUWsLgkfWQsF/1a9xtN7AKWeJcQuohuZOe1Rl\n3RLX/wAtosstAoIBAFJCHDUCGFm4+GrtAR2Wi8zC8rWQeaApOWPFfsXOPAOihLr4\nhLliLjkaXr8wBfbDM5aQmZ/WRpEldTyS1YZcv00isKz7ARoXzN4D0IIuP5RVADgu\nmSXT612Yw1oZ49HJIyLpGlfF1+qKki/1xvSu0oCQ5Q6Ipu/2IJYsWncaRsi1HNL2\nfmxKDVzQnnlE5kdXFlvphAK8iFoAmfY+/3F7yh4eGyqYR2Tmb4D39Fi8Z7yGym59\nLsXEMgF12tnecDUwq41T5txVDrrZlqCf+JrpA5ugc3hIzYCwPiE6H9+iwSe6x3Ys\n+Wm360juUqjkL0rCPhg1W01RVEq2SO5P55J0hO0CggEAG2+oCvCy20eSXHvZbXjt\nBp6gAiRLZAGVVRf9tT98HSEaniCqMnz+kT0h/2fD0qkPhAywIBs1bhX7jUU7WoQQ\nCAru9i1AZB4KSDgY5zzsfpd6hS/kci1KvlGr6tfQsTCSBHdeLRN9PtucA6hz8jZz\n/KN7kyUHov5gAZCV23cw304PjQ6xnub1A5oPYKsyn5sRaL23K4UR3ITl9Hco9GWo\n7/FT9gskpCJgNBGoxBVw8dBaRgZhmlB8UaK4kkuvyPpkCER8N5xH/biSeTjIZ01d\n0OXivrwKLxeqIIKNu8p21BqznD5Mv5aiPtZuOKpMEkOz8gBGwenTnAo0ND4v1ssd\nQQKCAQEAgdCIaIpd7CxEQxd9fTnplatR2oGM6dMYS86+xrXxRC4FaIxWjQ3yBGby\nW5dRaaJzWGbeMTLvYJxsB9FpHgJBlvVVSkY1DXFM1r/YOvfWR8bQlDU+i56aN6xE\nY6vKXvQkKzglcDsXEFUNCSllk75o/QNdWLl9qS75vbCRCLh04boB+t+aZzEzndZL\nzAq90a6S3Zt7TpKp+Mlne3i5GdeDs7DGY+cIt6XaayKSzfkoEG2KGH0FRokWDzPZ\n30FC7WI5neqDHCeqEst1a27OpkGDdP3J/fn34gPUUVBoVt5FeAR2j8+neBGTHqRT\nEz5LmauhiV3LJYsNCGvf1fEzN57qEQ==\n-----END PRIVATE KEY-----\n",
+            "renewal_eligibility": "INELIGIBLE",
+            "renewal_summary": [],
+            "status": "ISSUED",
+            "subject_alternative_names": [],
+            "tags": null,
+            "tags_all": {},
+            "type": "IMPORTED",
+            "validation_emails": [],
+            "validation_method": "NONE",
+            "validation_option": []
+          },
+          "sensitive_attributes": [],
+          "private": "bnVsbA=="
+        }
+      ]
+    }
+  ],
+  "check_results": null
+}
